--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -29,6 +29,10 @@ jobs:
       - name: Run a one-line script
         run: echo Hello, world!
 
+      # Runs a second single command using the runners shell
+      - name: Run a one-line script
+        run: echo Hello, world, once again!
+
       # Runs a set of commands using the runners shell
       - name: Run a multi-line script
         run: |
